package mirante.api.account;

import jakarta.persistence.Entity;
import jakarta.persistence.Id;

@Entity
public class Account {
  
  @Id
  private String username;
  private String name;
  private String email;
  private String password;

  public Account() {}

  public Account(String username, String name, String email, String password) {
    this.username = username;
    this.name = name;
    this.email = email;
    this.password = password;
  }

  public String getUsername() { return username; }
  public void setUsername(String username) { this.username = username; }
  public String getName() { return name; }
  public void setName(String name) { this.name = name; }
  public String getEmail() { return email; }
  public void setEmail(String email) { this.email = email; }
  public String getPassword() { return password; }
  public void setPassword(String password) { this.password = password; }
}

