package mirante.api.exercise.option;

import org.springframework.data.jpa.repository.JpaRepository;

interface OptionRepository extends JpaRepository<Option, String> {}
