package mirante.api.exercise.set;

import org.springframework.data.jpa.repository.JpaRepository;

interface ExerciseSetRepository extends JpaRepository<ExerciseSet, String> {}
